--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -7,8 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
-  padding: 10px;
   border-radius: 50%;
   border: none;
   background-color: #d9d8d8dc;
@@ -24,24 +22,33 @@
   gap: 20px;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 10vh;
   width: 100%;
   background-color: rgb(11, 11, 11);
 }
 
 .footer-container {
-  position: fixed;
-  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
   width: 100%;
+  background-color: rgb(11, 11, 11);
 }
 
 .footer{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
   width: 100%;
   background-color: rgb(11, 11, 11);
+}
+
+.active {
+  background-color: red;
+  color: whitesmoke;
+  height: 70px;
+  width: 70px;
 }
 
 .board-container {
@@ -52,3 +59,11 @@
   width: 100%;
 } 
 
+.clock-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+  
